# AgileLab

./: out.txt  test.m
MATLAB/: binselect.m  loadBinvox.m  loadClass.m  pca1.m  pca2.m  reconstruct.m  test.m  test1.m  to_v.m
MATLAB/1Dof-Full_BEO_Pipeline_v3.1/: findBasis_vbpca.m  one_dof_full_BEO_pipeline.m  readme.txt  singleObjectRotClassifyComplete_1dof.m
MATLAB/BEOs/: findBasis_vbpca.m  loadObjects.m  one_dof_full_BEO_pipeline.m  runVoxelize.m  singleObjectRotClassifyComplete_1dof.m
MATLAB/BEOs/VBPCA/: bottle_auto_basis_size_30_vobject.mat
MATLAB/PCAMV/: pca_full.m
MATLAB/matpcl/: loadpcd.m  savepcd.m
PCL/: CMakeLists.txt  image.pcd  octree_viewer.cpp  pcd_write.cpp
bottles/: 001.txt  002.txt  003.txt  004.txt  005.txt
meshes/: blue_funnel_downsampled.pcd  blue_funnel_with_tape_downsampled.pcd  engine.stl  engine_high_quality.pcd  engine_high_quality.stl  engine_with_stand.pcd  engine_with_stand.stl  formatted_ps_bottle.ply  funnel.ply  funnel.txt  funnel_downsampled.pcd  kinect2.stl  oil_bottle.txt  oil_bottle_downsampled.pcd  oil_filter.txt  oil_filter_downsampled.pcd  optotrak_cube.pcd  power_steering_bottle.ply  power_steering_bottle_downsampled.pcd  table.pcd
realsense/: CMakeLists.txt  pcap.cpp  voxel_filter.cpp
test/: CMakeLists.txt  image_convert.cpp  octree_viewer.cpp  voxel_filter.cpp
